loginForm/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

:root {
    --root-font-size: 16px;
    font-size: var(--root-font-size);
    --vh: 100vh;
    --logo-font-size: clamp(1rem, 4vw + 0.3vh, 5rem);
    --logo-image-size: clamp(3rem, 6vw + 0.3vh, 7rem);

    --signup-big: clamp(0.75rem, 0.87rem + 0.7vw, 2.38rem);
    --signup-mid: clamp(0.98rem, 0.2rem + 1vw, 1.05rem);
    --signup-bg-color: #ecedee;
    --signup-font-color: #000000be;
    

    --input-padding: 0.9vh;
    --input-margin: 3% 0;
    --box-shadow: 0px 5px 12px -7px #000;
    --signup-btn-submit: .8rem;

    --form-bg: #fff;
    --form-control-disabled: #959495;

    --emphasis-color: #769957;
    --em-one-color: #000000;
    --light-green: #3f6122;
    --valid-input: #3f6122;
}

@media (prefers-color-scheme: dark) {
    :root {
        --signup-bg-color: #031101;
        --signup-font-color: #a9acaf;
        --em-one-color: #dfd9d9;
        --image-screen: rgba(0,0,0,0.5);
        --form-bg: #0927054d;
        --light-green: rgb(118, 153, 87);
        --valid-input: #0aac40;
        --signup-top-screen: rgba(0,0,0,0.5);
    }

    .signup-label > input {
        border: 1.1925rem solid black;
    }
}


body {
    display: flex;
    width: 100vw;
    min-height: 100vh;
}

.main-container {
    display: flex;
    width: 100%;
}
    
.logo-section {
    background-image: url(img/logoBg.jpg);
    background-size: cover;
    background-position: center center;
    width: min(50vw, 550px);
    position: relative;
    flex-shrink: 2;
    overflow: hidden;
}

.logo-section-screen {
    /* background-color: red; */
    position: absolute;
    height: 100%;
    width: 100%;
    background-color: var(--image-screen);
}

.logo-container {
    font-family: 'norsebold';
    font-size: var(--logo-font-size);
    color: #fff;
    display: flex;
    position: absolute;
    width: 100%;
    top: 19%;
    background-color: rgba(0,0,0,0.4);
    align-items: center;
    justify-content: center;
    padding: 2% 0;
}

.logo-image {
    height: var(--logo-image-size);
    width: auto;
}

.container {
    padding: 0 min(4.3rem, 7vw);
}

.signup-section {
    background-color: var(--signup-bg-color);
    width: 100%;
    display: flex;
    flex-direction: column;
}

.signup-section

.signup-top-screen {
    padding-top: min(11vh, 30%);
    padding-bottom: 3rem;
}

.coerce-container {
    font-size: var(--signup-big);
    font-weight: bold;
    max-width: 55ch;
    /* margin-top: min(11vh, 30%);
    margin-bottom: 3rem; */
    color: var(--signup-font-color);
}

.coerce-container p:nth-of-type(2) {
    margin-top: 1rem;
}

.diff-em-one {
    color: var(--em-one-color);
    font-weight: 1000;
    text-decoration: underline;
    text-decoration-color: var(--light-green);
    /* text-decoration-style: wavy; */
    text-decoration-thickness: 0.103rem;
}

.diff-em-two {
    color: var(--emphasis-color);
}

.signup-form-bg {
    background-color: var(--form-bg);
    /* background: linear-gradient(109.6deg, rgb(5, 84, 94) 16%, rgb(187, 187, 187)91.1%); */
    box-shadow: var(--box-shadow);
}

.signup-fieldset {
    display: flex;
    flex-direction: column;
    border: none;
    padding-top: min(2.1rem, 5%);
    padding-bottom: min(1.1rem, 2%);
    margin-bottom: min(2rem, 4%);
    /* margin-bottom: 2%;
    margin-bottom: 2rem; */
}

.signup-fieldset-caption {
    font-size: var(--signup-big);
    color: var(--signup-font-color)
}

.signup-inputs {
    display: flex;
    flex-wrap: wrap;
    max-width: 50rem;
}

.signup-label {
    flex: 1;
    flex-basis: 33%;
    flex-basis: 30%;
    margin: var(--input-margin);
    margin-right: 2em;
    display: flex;
    flex-direction: column;
    font-size: var(--signup-mid);
    letter-spacing: 2px;
    color: var(--signup-font-color);
    font-weight: 600;
}

.signup-label > input {
    padding: var(--input-padding);
    border-radius: 6px;
    border: 1px solid #e3e3e3;
}

.signup-label > input:focus {
    outline: none;
}

.signup-label .invalid {
    border: 1px solid red;
}

.signup-label .valid {
    border: 0.1925rem solid var(--valid-input);

}

.error-container {
    display: flex;
    align-items: center;
}

.error-msg {
    color: red;
    font-size: 0.81rem;
    margin-top: 8px;
    display: none;
}


.signup-bottom,
.signup-bottom > button {
    font-size: var(--signup-mid);   
}

.signup-bottom > button {
    background-color: var(--light-green);
    padding: var(--signup-btn-submit);
    color: #fff;
    border-radius: 11px;
    border: 2px solid #536642;
    border-style: outset;
}


.signup-bottom > button:active {
    padding: .7rem;
    margin-bottom: .2rem;
}

.login-option {
    margin: min(2rem, 5%) 0;
    color: var(--signup-font-color);
}

.login {
    color: var(--emphasis-color);
    font-weight: 600;
}

.form-control-disabled,
input[type="password"]:disabled {
    --form-control-color: var(--form-control-disabdisabledled);

    
    color: var(--form-control-disabled);
    cursor: not-allowed;
}

button[type="submit"]:disabled:hover {
    background-color: var(--form-control-disabled);
}

















@media (max-width: 320.99px){
    :root {
        --root-font-size: 12px;
        --signup-mid: 0.85rem;
        --input-padding: 0.3vh;
        --signup-btn-submit: .3rem;
        --box-shadow: none;
    }

    .container {
        padding: 0 5vw;
    }

    .coerce-container {
        margin: 1rem;
    }

    .signup-top {
        margin-bottom: 2rem;

    }

    .signup-fieldset-caption,
    .signup-bottom {
        margin-left: var(--input-margin);   
    }

    .signup-fieldset-caption {
        margin-top: 1rem;
    }
}

@media (min-width: 321px) and (max-width: 681px) {
    :root {
        --root-font-size: 14px;
        --input-padding: 0.5vh;
        --box-shadow: 0px 5px 8px -7px #000;
        --signup-btn-submit: .5rem;
    }

    .small-device-signup-top {
        margin-bottom: 2rem;
    }

    .signup-fieldset {
        padding-top: 0rem;
    }

    .signup-fieldset-caption {
        margin-top: 2rem;
    }

    .signup-fieldset-caption,
    .signup-bottom {
        margin-left: var(--input-margin);   
    }
}


@media(max-width: 682.98px) {
    :root {
        --input-margin: 3%;
        --em-one-color: #dfd9d9;

    }
    
    .logo-section {
        display: none;
    }

    .coerce-container {
        color: #ccc9c9ec;
    }

    .signup-top {
        background-image: url(img/logoBg.jpg);
        background-size: cover;
        background-position:   center top;
        /* background-position:   bottom left; */
        background-color: red;
        margin-bottom: 0;
    }

    .signup-top-screen {
        /* height: 100%; */
        /* background-color: red; */
        /* overflow: hidden; */
        background-color: var(--image-screen);

    }
}

